# c-cgi-lib

./: CGI_auth.pc  CMakeLists.txt  README  cmake_install.cmake  install_html.cmake  run
html/: admin.html  auth_test.html  pass.js  unssl.html
lib/: CGI_auth.c  CGI_auth.pc.in  CMakeLists.txt  file_functions.h  getfile.c  web_functions.c  web_functions.h
locale/ru/: ru.po
locale/ru/LC_MESSAGES/: auth.mo
scripts/: INIT_DB  cp_html  user-pass
src/: auth.c  auth_test.c
src/include/: CGI_auth.h
